--- a/index.html
+++ b/index.html
@@ -16,126 +16,126 @@
 </head>
 
 <body>
-    <!-- Header -->
-    <header class="container">
-      <div class="content">
-        <a href="index.html" class="desktop logo">Fotomatic</a>
-        <nav class="desktop">
-          <ul>
-            <li><a href="#">Product detail</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="https://www.instagram.com/">Follow us <img class="icon"
-                  src="./resources/images/instagram.png"></a></li>
-            <span><a href="#" class="button">Join us</a></span>
-          </ul>
-        </nav>
-        <nav class="mobile">
-          <ul>
-            <li class="mobile logo"><a href="#"><img src="./resources/images/ic-logo.svg"></a></li>
-            <li class="pad-left"><a href="#"><img src="./resources/images/ic-product-detail.svg"></a></li>
-            <li class="pad-left"><a href="#"><img src="./resources/images/ic-about-us.svg"></a></li>
-            <span class="pad-left"><a href="#" class="button">Join us</a></span>
-          </ul>
-        </nav>
-    </header>
+  <!-- Header -->
+  <header class="container">
+    <div class="content">
+      <span><a href="index.html" class="desktop logo">Fotomatic</a></span>
+      <nav class="desktop">
+        <ul>
+          <li><a href="#">Product detail</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="https://www.instagram.com/">Follow us <img class="icon"
+                src="./resources/images/instagram.png"></a></li>
+          <span><a href="#" class="button">Join us</a></span>
+        </ul>
+      </nav>
+      <nav class="mobile">
+        <ul>
+          <li class="logo"><a href="#"><img src="./resources/images/ic-logo.svg"></a></li>
+          <li class="pad-left"><a href="#"><img src="./resources/images/ic-product-detail.svg"></a></li>
+          <li class="pad-left"><a href="#"><img src="./resources/images/ic-about-us.svg"></a></li>
+          <li class="pad-left"><a href="#" class="button">Join us</a></li>
+        </ul>
+      </nav>
+  </header>
 
-    <!-- Main Content -->
-    <main>
+  <!-- Main Content -->
+  <main>
 
-      <!-- Sign Up Section -->
-      <section class="container">
-        <div id="sign-up-section" class="banner">
-          <div id="sign-up-cta">
-            <div class="content center">
-              <div class="header">
-                <h2 class="cursive">Instant</h2>
-                <h1 class="striking">FORMAT CAMERA</h1>
-              </div>
-              <div class="email">
-                <span>
-                  Email us to request a demo and be in our waiting list for the <strong>Febuary 2017</strong> release!
-                </span>
-                <div class="button">Join the waiting list</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section><!-- Sign Up Section end -->
-
-      <!-- Features Section -->
-      <section class="container">
-        <div id="features-section">
-          <div class="feature odd center">
-            <div class="image-container">
-              <img src="resources/images/feature-1.png" class="normal" />
-              <img src="resources/images/feature-1resize.png" class="resize" />
-            </div>
-            <div class="content">
-              <h2>Advanced, automatic, instant</h2>
-              <h3>Shutter speed, apperture and flash output adjust automatically</h3>
-            </div>
-          </div>
-          <div class="feature even center">
-            <div class="image-container">
-              <img src="resources/images/feature-2.png" class="normal" />
-              <img src="resources/images/feature-2resize.png" class="resize" />
-            </div>
-            <div class="content">
-              <h2>Beautifully crafted inside-out</h2>
-              <h3>From the paint outside to the tiny screw inside, Fotomatic is crafted with love and 20-year of
-                expertise
-              </h3>
-            </div>
-
-          </div>
-        </div>
-      </section><!-- Features Section end-->
-
-      <!-- Filters Section -->
-      <section class="container">
-        <div id="filters-section">
+    <!-- Sign Up Section -->
+    <section class="container">
+      <div id="sign-up-section" class="banner">
+        <div id="sign-up-cta">
           <div class="content center">
-            <h2>Over 20+ filters to choose from</h2>
-            <h3>Feed your creativity with 20 different filter designed by our eclectic in-house photographers!</h3>
-          </div>
-          <div class="images-container">
-            <div class="image-container">
-              <img src="./resources/images/filter-1.png" />
+            <div class="header">
+              <h2 class="cursive">Instant</h2>
+              <h1 class="striking">FORMAT CAMERA</h1>
             </div>
-            <div class="image-container">
-              <img src="./resources/images/filter-2.png" />
-            </div>
-            <div class="image-container">
-              <img src="./resources/images/filter-3.png" />
-            </div>
-            <div class="image-container extra">
-              <img src="./resources/images/filter-4.png" />
+            <div class="email">
+              <span>
+                Email us to request a demo and be in our waiting list for the <strong>Febuary 2017</strong> release!
+              </span>
+              <div class="button">Join the waiting list</div>
             </div>
           </div>
         </div>
-      </section><!-- Filters Section end-->
+      </div>
+    </section><!-- Sign Up Section end -->
 
-      <!-- Quotes Section -->
-      <section class="container">
-        <div id="quotes-section">
-          <div class="content center">
-            <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
-            <img class="quote-citation" src="./resources/images/photography-logo.png" />
+    <!-- Features Section -->
+    <section class="container">
+      <div id="features-section">
+        <div class="feature odd center">
+          <div class="image-container">
+            <img src="resources/images/feature-1.png" class="normal" />
+            <img src="resources/images/feature-1resize.png" class="resize" />
           </div>
-        </div>
-      </section><!-- Quotes Section end -->
-
-      <!-- Footer -->
-      <section class="container">
-        <footer>
           <div class="content">
-            <span class="copyright">© 2016 Fotomatic, All Rights Reserved</span>
-            <span class="location">Designed in NYC</span>
+            <h2>Advanced, automatic, instant</h2>
+            <h3>Shutter speed, apperture and flash output adjust automatically</h3>
           </div>
-        </footer>
-      </section><!-- Footer end -->
+        </div>
+        <div class="feature even center">
+          <div class="image-container">
+            <img src="resources/images/feature-2.png" class="normal" />
+            <img src="resources/images/feature-2resize.png" class="resize" />
+          </div>
+          <div class="content">
+            <h2>Beautifully crafted inside-out</h2>
+            <h3>From the paint outside to the tiny screw inside, Fotomatic is crafted with love and 20-year of
+              expertise
+            </h3>
+          </div>
 
-    </main>
+        </div>
+      </div>
+    </section><!-- Features Section end-->
+
+    <!-- Filters Section -->
+    <section class="container">
+      <div id="filters-section">
+        <div class="content center">
+          <h2>Over 20+ filters to choose from</h2>
+          <h3>Feed your creativity with 20 different filter designed by our eclectic in-house photographers!</h3>
+        </div>
+        <div class="images-container">
+          <div class="image-container">
+            <img src="./resources/images/filter-1.png" />
+          </div>
+          <div class="image-container">
+            <img src="./resources/images/filter-2.png" />
+          </div>
+          <div class="image-container">
+            <img src="./resources/images/filter-3.png" />
+          </div>
+          <div class="image-container extra">
+            <img src="./resources/images/filter-4.png" />
+          </div>
+        </div>
+      </div>
+    </section><!-- Filters Section end-->
+
+    <!-- Quotes Section -->
+    <section class="container">
+      <div id="quotes-section">
+        <div class="content center">
+          <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
+          <img class="quote-citation" src="./resources/images/photography-logo.png" />
+        </div>
+      </div>
+    </section><!-- Quotes Section end -->
+
+    <!-- Footer -->
+    <section class="container">
+      <footer>
+        <div class="content">
+          <span class="copyright">© 2016 Fotomatic, All Rights Reserved</span>
+          <span class="location">Designed in NYC</span>
+        </div>
+      </footer>
+    </section><!-- Footer end -->
+
+  </main>
 </body>
 
 </html>
